8211028: jdb "eval" should allow to create a new value type instance with specified fields

Reviewed-by: dsimms